Smartclide working for Maven, Javascript, Python and CPP Checks if project already downloaded or scanned